@@ -27,27 +27,6 @@ Why:
  leftovers are automatically cleaned up on database parsing. So there's no
  need anymore for this manual action.
 
-What: -Zlzma (dpkg-deb option value)
-Status: deprecated
-When: 1.17.x
-Warning: program
-Why:
- LZMA compression has some format deficiencies fixed by XZ, which is what
- upstream has replaced it with, as such there's no point in continuing to
- support compressing new .deb files with that format, although unpacking
- will be kept being supported to handle existing compressed files.
-
-What: -Zbzip2 (dpkg-deb option value)
-Status: deprecated
-When: 1.18.x
-Warning: program
-Why:
- bzip2 compression has been superseded by xz when it comes to size, and
- gzip is still faster, in Debian there's really not many packages using
- that compression, as such there's no point in continuing to support
- compressing new .deb files with that format, although unpacking
- will be kept being supported to handle existing compressed files.
-
 What: --control-path (dpkg-query option)
 Status: deprecated
 When: 1.18.x
@@ -172,3 +151,24 @@ Why:
  Should switch to use binary:Version or source:Version substvars.
  .
  The code got changed to emit errors.
+
+What: -Zlzma (dpkg-deb option value)
+Status: removed
+When: 1.18.11
+Warning: program
+Why:
+ LZMA compression has some format deficiencies fixed by XZ, which is what
+ upstream has replaced it with, as such there's no point in continuing to
+ support compressing new .deb files with that format, although unpacking
+ will be kept being supported to handle existing compressed files.
+
+What: -Zbzip2 (dpkg-deb option value)
+Status: removed
+When: 1.18.11
+Warning: program
+Why:
+ bzip2 compression has been superseded by xz when it comes to size, and
+ gzip is still faster, in Debian there's really not many packages using
+ that compression, as such there's no point in continuing to support
+ compressing new .deb files with that format, although unpacking
+ will be kept being supported to handle existing compressed files.
