@@ -230,10 +230,10 @@ The default for this field is “${Package}\\t${Version}\\n”.
 .TP
 .BI \-z compress-level
 Specify which compression level to use on the compressor backend, when
-building a package (default is 9 for gzip and bzip2, 6 for xz and lzma).
-The accepted values are 0-9 with: 0 being mapped to compressor none for
-gzip and 0 mapped to 1 for bzip2. Before dpkg 1.16.2 level 0 was
-equivalent to compressor none for all compressors.
+building a package (default is 9 for gzip, 6 for xz).
+The accepted values are 0-9 with: 0 being mapped to compressor none for gzip.
+Before dpkg 1.16.2 level 0 was equivalent to compressor none for all
+compressors.
 .TP
 .BI \-S compress-strategy
 Specify which compression strategy to use on the compressor backend, when
@@ -244,7 +244,6 @@ gzip (since dpkg 1.17.0) and \fBextreme\fP for xz.
 .BI \-Z compress-type
 Specify which compression type to use when building a package.
 Allowed values are \fBgzip\fP, \fBxz\fP (since dpkg 1.15.6),
-\fBbzip2\fP (deprecated), \fBlzma\fP (since dpkg 1.14.0; deprecated),
 and \fBnone\fP (default is \fBxz\fP).
 .TP
 .B \-\-uniform\-compression
