@@ -6,6 +6,7 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
     to be valid. Thanks to David Kalnischkies <david@kalnischkies.de>.
   * Add support to dpkg-scanpackages for scanning a single binary file.
     Thanks to Javier Serrano Polo <javier@jasp.net>. Closes: #833964
+  * Obsolete dpkg-deb bzip2 and lzma compression methods by emitting errors.
   * Perl modules:
     - Obsolete Source-Version substvar in Dpkg::Substvars by emitting errors.
   * Packaging:
